--- a/app/src/main/res/layout/interest_listview_element.xml
+++ b/app/src/main/res/layout/interest_listview_element.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="50dp">
+    android:minHeight="50dp"
+    android:id="@+id/rl_interest_element">
 
     <TextView
         android:layout_width="wrap_content"
@@ -11,7 +12,8 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="15dp" />
+        android:layout_marginLeft="15dp"
+        android:textColor="#000000" />
 
     <CheckBox
         android:layout_width="wrap_content"
