--- a/app/src/main/res/layout/activity_registra.xml
+++ b/app/src/main/res/layout/activity_registra.xml
@@ -21,7 +21,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="120dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/img_splash" />
 
         <com.github.florent37.materialtextfield.MaterialTextField
             android:layout_width="wrap_content"
