--- a/app/src/main/res/layout/interest_listview_element.xml
+++ b/app/src/main/res/layout/interest_listview_element.xml
@@ -23,6 +23,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="15dp" />
+        android:layout_marginRight="15dp"
+        android:theme="@style/AppTheme" />
 
 </RelativeLayout>
