--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -17,4 +17,13 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/img_splash"/>
+
+    <ImageView
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:id="@+id/img_made_with_splash"
+        android:layout_below="@+id/img_logo_splash"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/made_with_splash"
+        android:layout_marginTop="20dp" />
 </RelativeLayout>
