--- a/app/src/main/res/layout/fragment_profilo.xml
+++ b/app/src/main/res/layout/fragment_profilo.xml
@@ -7,7 +7,7 @@
 
     <ImageView
         android:id="@+id/profile_img_blur"
-        android:src="@drawable/cnv"
+        android:src="@drawable/sunsetswerve"
         android:layout_alignParentStart="false"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -20,7 +20,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:id="@+id/ll_profile_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -84,69 +85,21 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sport"
-        android:id="@+id/tv_interest_sport"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/my_interests"
+        android:id="@+id/tv_my_interests"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_below="@+id/profile_img_blur"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp" />
+        android:textColor="@color/colorAccent"
+        android:textStyle="bold|italic" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_profile_interests"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/football"
-        android:id="@+id/cb_interest_football"
-        android:layout_gravity="center_horizontal"
-        android:layout_below="@+id/tv_interest_sport"
-        android:layout_alignLeft="@+id/tv_interest_sport"
-        android:layout_marginLeft="20dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/music"
-        android:id="@+id/tv_interest_music"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_below="@+id/cb_interest_football"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/techno"
-        android:id="@+id/cb_interest_techno"
-        android:layout_gravity="center_horizontal"
-        android:layout_below="@+id/tv_interest_music"
-        android:layout_alignLeft="@+id/tv_interest_music"
-        android:layout_marginLeft="20dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/submit"
-        android:id="@+id/btn_submit_interests"
-        android:layout_below="@+id/cb_interest_techno"
-        android:layout_centerHorizontal="true"
-        android:nestedScrollingEnabled="false" />
-
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Switch"
-        android:id="@+id/switch2"
-        android:layout_alignParentTop="false"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentStart="false"
-        android:layout_centerVertical="true"
-        android:splitTrack="false"
-        android:switchPadding="20dp"
-        android:thumbTint="#ff3d00"
-        android:trackTint="@color/about_instagram_color"
-        android:layout_gravity="center_horizontal"
-        android:layout_below="@+id/btn_submit_interests"
-        android:layout_marginLeft="20dp"
-        android:layout_margin="20dp"
-        android:trackTintMode="src_atop" />
+        android:layout_below="@+id/tv_my_interests"
+        android:scrollbars="vertical"
+        android:layout_marginTop="15dp" />
 
 </RelativeLayout>
